--- a/portfolio.html
+++ b/portfolio.html
@@ -268,6 +268,18 @@
             </li>
           </ul>
         </div>
+        <div class="form-box">
+          <h3 class="title">Підпишіться на розсилку</h3>
+          <form class="form" action="">
+            <input type="email" name="email" placeholder="E-mail" />
+            <button type="submit">
+              Підписатися
+              <svg class="icon-send">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
