--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         </div>
         <div class="form-box">
           <h3 class="title">Підпишіться на розсилку</h3>
-          <form class="form" action="">
+          <form class="form" action="#">
             <input type="email" name="email" placeholder="E-mail" />
             <button type="submit">
               Підписатися
@@ -418,7 +418,7 @@
           </svg>
         </button>
 
-        <form class="form" action="">
+        <form class="form" action="#">
           <p class="form-title">Залиште свої дані, ми вам передзвонимо</p>
           <div class="form-field">
             <label class="form-label" for="user-name">Ім'я </label>
@@ -456,7 +456,6 @@
             <textarea
               class="form-textarea"
               id="user-coment"
-              type="text"
               name="coment"
               placeholder="Введіть текст"
             ></textarea>
