--- a/portfolio.html
+++ b/portfolio.html
@@ -270,7 +270,7 @@
         </div>
         <div class="form-box">
           <h3 class="title">Підпишіться на розсилку</h3>
-          <form class="form" action="">
+          <form class="form" action="#">
             <input type="email" name="email" placeholder="E-mail" />
             <button type="submit">
               Підписатися
